@@ -1,13 +1,13 @@
 package io.quarkus.resteasy.test.asyncio;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
 
-import io.quarkus.bootstrap.model.AppArtifact;
 import io.quarkus.builder.Version;
+import io.quarkus.maven.dependency.Dependency;
 import io.quarkus.test.QuarkusUnitTest;
 import io.restassured.RestAssured;
 
@@ -18,8 +18,7 @@ public class AsyncIOUndertowTest {
             .withApplicationRoot((jar) -> jar
                     .addClasses(AsyncIOResource.class))
             .withConfigurationResource("application-asyncio.properties")
-            .setForcedDependencies(
-                    Arrays.asList(new AppArtifact("io.quarkus", "quarkus-undertow", Version.getVersion())));
+            .setForcedDependencies(List.of(Dependency.of("io.quarkus", "quarkus-undertow", Version.getVersion())));
 
     @Test
     public void testAsyncIODoesNotBlock() {
