@@ -1,11 +1,11 @@
 package io.quarkus.resteasy.reactive.links.deployment;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.extension.RegisterExtension;
 
-import io.quarkus.bootstrap.model.AppArtifact;
 import io.quarkus.builder.Version;
+import io.quarkus.maven.dependency.Dependency;
 import io.quarkus.test.QuarkusProdModeTest;
 
 public class HalLinksWithJsonbTest extends AbstractHalLinksTest {
@@ -13,10 +13,9 @@ public class HalLinksWithJsonbTest extends AbstractHalLinksTest {
     static final QuarkusProdModeTest TEST = new QuarkusProdModeTest()
             .withApplicationRoot((jar) -> jar
                     .addClasses(AbstractEntity.class, TestRecord.class, TestResource.class))
-            .setForcedDependencies(
-                    Arrays.asList(
-                            new AppArtifact("io.quarkus", "quarkus-resteasy-reactive-jsonb", Version.getVersion()),
-                            new AppArtifact("io.quarkus", "quarkus-hal", Version.getVersion())))
+            .setForcedDependencies(List.of(
+                    Dependency.of("io.quarkus", "quarkus-resteasy-reactive-jsonb", Version.getVersion()),
+                    Dependency.of("io.quarkus", "quarkus-hal", Version.getVersion())))
             .setRun(true);
 
 }
