@@ -4,7 +4,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -13,8 +12,8 @@ import org.junit.jupiter.api.extension.RegisterExtension;
 import io.dekorate.servicebinding.model.ServiceBinding;
 import io.fabric8.kubernetes.api.model.HasMetadata;
 import io.fabric8.kubernetes.api.model.apps.Deployment;
-import io.quarkus.bootstrap.model.AppArtifact;
 import io.quarkus.builder.Version;
+import io.quarkus.maven.dependency.Dependency;
 import io.quarkus.test.ProdBuildResults;
 import io.quarkus.test.ProdModeTestResults;
 import io.quarkus.test.QuarkusProdModeTest;
@@ -28,12 +27,11 @@ public class KubernetesWithAutoPostgresBindingTest {
             .setApplicationVersion("0.1-SNAPSHOT")
             .withConfigurationResource("kubernetes-with-auto-postgres-binding.properties")
             .setLogFileName("k8s.log")
-            .setForcedDependencies(
-                    Arrays.asList(
-                            new AppArtifact("io.quarkus", "quarkus-kubernetes", Version.getVersion()),
-                            new AppArtifact("io.quarkus", "quarkus-jdbc-postgresql", Version.getVersion()),
-                            new AppArtifact("io.quarkus", "quarkus-datasource", Version.getVersion()),
-                            new AppArtifact("io.quarkus", "quarkus-kubernetes-service-binding", Version.getVersion())));
+            .setForcedDependencies(List.of(
+                    Dependency.of("io.quarkus", "quarkus-kubernetes", Version.getVersion()),
+                    Dependency.of("io.quarkus", "quarkus-jdbc-postgresql", Version.getVersion()),
+                    Dependency.of("io.quarkus", "quarkus-datasource", Version.getVersion()),
+                    Dependency.of("io.quarkus", "quarkus-kubernetes-service-binding", Version.getVersion())));
 
     @ProdBuildResults
     private ProdModeTestResults prodModeTestResults;
